--- a/conf.ini
+++ b/conf.ini
@@ -1,14 +1,18 @@
 [config]
 
 ; 协议类型 1:苏标 2.瑞为协议 3.JT808 4、顺丰协议 5、苏标终端
-protocol_type = 3
+protocol_type = 5
 ; 实时数据，只有苏标测试才生效
 sync_data = True
 ;sync_data = False
 ; 服务器IP地址
 address = 192.168.100.100
 ; 服务器端口号
-port = 8888
+port = 18288
 ; 苏标收到告警报文后是否自动请求告警图片和视频
-;get_media = True
-get_media = False
+get_media = True
+;get_media = False
+;苏标终端协议文件服务器地址
+;file_address = 103.46.128.43
+file_address = 192.168.100.100
+file_port = 9090
