--- a/conf.ini
+++ b/conf.ini
@@ -6,7 +6,7 @@ protocol_type = 5
 sync_data = True
 ;sync_data = False
 ; 服务器IP地址
-address = 192.168.100.100
+address = 172.16.6.38
 ; 服务器端口号
 port = 8888
 ; 苏标收到告警报文后是否自动请求告警图片和视频
@@ -14,6 +14,7 @@ get_media = True
 ;get_media = False
 ; 苏标终端协议文件服务器地址
 file_address = 103.46.128.43
-;file_address = 192.168.100.100
 file_port = 28388
-;file_port = 9090
+; 苏标终端文件服务器本地监听地址
+file_address_local = 172.16.6.38
+file_port_local = 8080
