支持苏标终端告警附件并行传输，优化界面

--- a/conf.ini
+++ b/conf.ini
@@ -6,16 +6,17 @@ protocol_type = 5
 sync_data = True
 ;sync_data = False
 ; 服务器IP地址
-address = 192.168.100.234
+address = 192.168.100.100
 ; 服务器端口号
 port = 8888
 ; 苏标收到告警报文后是否自动请求告警图片和视频
 ;get_media = True
 get_media = False
 ; 苏标终端协议文件服务器地址
-file_address = 103.46.128.41
-file_port = 44743
+;file_address = 47.98.225.186
+file_address = 192.168.100.100
+file_port = 8000
 ; 苏标终端文件服务器本地监听地址
-file_address_local = 192.168.100.234
-file_port_local = 9999
+file_address_local = 192.168.100.100
+file_port_local = 8000
 
