--- a/conf.ini
+++ b/conf.ini
@@ -1,7 +1,7 @@
 [config]
 
 ; 协议类型 1:苏标外设 2.瑞为协议 3.JT808 4、顺丰协议 5、苏标终端
-protocol_type = 1
+protocol_type = 5
 ; 服务器IP地址
 address = 192.168.100.100
 ; 服务器端口号
@@ -9,14 +9,28 @@ port = 8888
 
 
 ; 苏标终端协议文件服务器地址
-file_address = 47.98.225.186
-file_port = 28388
+file_address_su_ter = 47.98.225.186
+file_port_su_ter = 28388
 ; 苏标终端文件服务器本地监听地址
-file_address_local = 192.168.100.100
-file_port_local = 8000
+file_address_su_ter_local = 192.168.100.100
+file_port_su_ter_local = 8000
 
 
 ; 苏标外设收到告警报文后是否自动请求告警图片和视频
 get_media = True
 ; 实时数据，只有苏标测试才生效
 sync_data = True
+
+
+; 顺丰http服务器IP地址
+file_address_sf_local = 192.168.100.100
+; 顺丰http服务器端口
+file_port_sf_local = 9999
+
+
+; 是否开启实时视频存储服务器
+instant_video = True
+; 实时视频服务器IP地址
+instant_video_address_local = 192.168.100.100
+; 实时视频服务器端口
+instant_video_port_local = 9000
