--- a/conf.ini
+++ b/conf.ini
@@ -9,28 +9,28 @@ port = 8888
 
 
 ; 苏标终端协议文件服务器地址
-file_address_su_ter = 192.168.100.100
-file_port_su_ter = 8000
+file_address_su_ter = 103.46.128.43
+file_port_su_ter = 28388
 ; 苏标终端文件服务器本地监听地址
 file_address_su_ter_local = 192.168.100.100
 file_port_su_ter_local = 8000
 
 
 ; 苏标外设收到告警报文后是否自动请求告警图片和视频
-get_media = True
+get_media = False
 ; 实时数据，只有苏标测试才生效
-sync_data = True
+sync_data = False
 
 
 ; 顺丰http服务器IP地址
-file_address_sf_local = 192.168.100.100
+file_address_sf_local = 192.168.10.147
 ; 顺丰http服务器端口
 file_port_sf_local = 9999
 
 
 ; 是否开启实时视频存储服务器
-instant_video = True
+instant_video = False
 ; 实时视频服务器IP地址
-instant_video_address_local = 192.168.100.100
+instant_video_address_local = 192.168.10.147
 ; 实时视频服务器端口
 instant_video_port_local = 9000
