--- a/conf.ini
+++ b/conf.ini
@@ -1,7 +1,7 @@
 [config]
 
 ; 协议类型 1:苏标外设 2.瑞为协议 3.JT808 4、顺丰协议 5、苏标终端
-protocol_type = 5
+protocol_type = 1
 ; 服务器IP地址
 address = 192.168.100.100
 ; 服务器端口号
@@ -17,9 +17,9 @@ file_port_su_ter_local = 8000
 
 
 ; 苏标外设收到告警报文后是否自动请求告警图片和视频
-get_media = False
+get_media = True
 ; 实时数据，只有苏标测试才生效
-sync_data = False
+sync_data = True
 
 
 ; 顺丰http服务器IP地址
