--- a/conf.ini
+++ b/conf.ini
@@ -12,7 +12,7 @@ port = 8888
 file_address_su_ter = 103.46.128.43
 file_port_su_ter = 28388
 ; 苏标终端文件服务器本地监听地址
-file_address_su_ter_local = 192.168.100.100
+file_address_su_ter_local = 192.168.10.249
 file_port_su_ter_local = 8000
 
 
@@ -29,8 +29,8 @@ file_port_sf_local = 9999
 
 
 ; 是否开启实时视频存储服务器
-instant_video = False
+instant_video = True
 ; 实时视频服务器IP地址
-instant_video_address_local = 192.168.10.147
+instant_video_address_local = 192.168.10.249
 ; 实时视频服务器端口
 instant_video_port_local = 9000
